Added  model and ef core

--- a/AspNetCoreAngularCliTemplate/appsettings.json
+++ b/AspNetCoreAngularCliTemplate/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "VideoContext": "Server=(localdb)\\mssqllocaldb;Database=VideoTrackerDb;Trusted_Connection=True;MultipleActiveResultSets=true" }
 }
